--- a/app/templates/homePage.html
+++ b/app/templates/homePage.html
@@ -1,13 +1,15 @@
 <div class="row headerTitle">
-	<h3 class="col-md-12">ADS - Login</h3>
+	<h3 class="col-md-12">ADS - Home</h3>
 </div>
 <div class="row homepage">
 	<div class="col-md-2 panel">
 		<left-public-sidebar></left-public-sidebar>
 	</div>
-	<div class="col-md-2"></div>
-	<div class="col-md-3 panel">
-		<login-form></login-form>
+	<div class="col-md-7">
+		<public-ads></public-ads>
+	</div>
+	<div class="col-md-3">
+		<right-filters></right-filters>
 	</div>
 
 </div>
