--- a/app/templates/loginForm.html
+++ b/app/templates/loginForm.html
@@ -8,7 +8,7 @@
 		</div>
 		<div class="form-group">
 			<label for="password" class="col-lg-1 control-label">Password</label>
-			<input type="text" id="password" class="control-label" placeholder="Password" required="required"/>
+			<input type="password" id="password" class="control-label" placeholder="Password" required="required"/>
 		</div>
 		<div class="form-group">
 			<span class="col-md-3"></span>
