--- a/app/templates/loginForm.html
+++ b/app/templates/loginForm.html
@@ -4,15 +4,15 @@
 	<form >
 		<div class="form-group">
 			<label for="username" class="col-lg-1 control-label">Username</label>
-			<input type="text" id="username" class="control-label" placeholder="Username" required="required"/>
+			<input type="text" id="username" class="control-label" placeholder="Username" required="required" ng-model="user.username"/>
 		</div>
 		<div class="form-group">
 			<label for="password" class="col-lg-1 control-label">Password</label>
-			<input type="password" id="password" class="control-label" placeholder="Password" required="required"/>
+			<input type="password" id="password" class="control-label" placeholder="Password" required="required" ng-model="user.password"/>
 		</div>
 		<div class="form-group">
 			<span class="col-md-3"></span>
-			<button class="col-md-3">Login</button>
+			<button class="col-md-3" type="submit" ng-click="login(user)">LoginL</button>
 			<a href="#/register" class="col-lg-5">Register here</a>
 		</div>
 	</form>
