add is loggedIn checker

--- a/app/templates/ads.html
+++ b/app/templates/ads.html
@@ -28,38 +28,31 @@
                         <div class="adText">
                             {{ad.text}}
                         </div>
-                        <br/>
 
                         <div class="row">
                             <div class="col-md-3">
-                                <br/> Name
+                                Name
                             </div>
-                            <div class="col-md-9">
-                                <div class="adInfo">
+                            <div class="col-md-8 adInfo">
                                     {{ad.ownerName}}
-                                </div>
                             </div>
                         </div>
 
                         <div class="row">
                             <div class="col-md-3">
-                                <br/> E-mail
+                                 E-mail
                             </div>
-                            <div class="col-md-9">
-                                <div class="adInfo">
+                            <div class="col-md-8 adInfo">
                                     {{ad.ownerEmail}}
-                                </div>
                             </div>
                         </div>
 
                         <div class="row">
                             <div class="col-md-3">
-                                <br/> Phone
+                                 Phone
                             </div>
-                            <div class="col-md-9">
-                                <div class="adInfo">
+                            <div class="col-md-8 adInfo">
                                     {{ad.ownerPhone}}
-                                </div>
                             </div>
                         </div>
                     </div>
