--- a/app/templates/leftNaviBar.html
+++ b/app/templates/leftNaviBar.html
@@ -1,5 +1,10 @@
 <nav>
 	<h1>Navigation</h1>
 	<hr>
-	
+	<a href="">Home</a>
+	<span ng-if="isLoggedIn">
+		<a href="">My Ads</a>
+		<a href="">Publish New Ad</a>
+		<a href="">Edit Profile</a>
+	</span>
 </nav>
