create publish new ad, try to show user ads

--- a/app/templates/leftNaviBar.html
+++ b/app/templates/leftNaviBar.html
@@ -1,7 +1,7 @@
 <nav>
 	<h1>Navigation</h1>
 	<hr>
-	<a href="">Home</a><br/>
+	<a href="#/">Home</a><br/>
 	<span ng-if="isLoggedIn">
 		<a href="#/user/ads">My Ads</a><br/>	
 		<a href="#/user/ads/publish">Publish New Ad</a><br/>
