--- a/app/templates/addAds.html
+++ b/app/templates/addAds.html
@@ -6,10 +6,23 @@
 			<label for="text" class="col-md-3 control-label">Text:</label>
 			<textarea id="text" class="control-label col-md-9"  required="required" ng-model="ad.text"></textarea><br>
 			<label for="image" class="col-md-3 control-label">Image:</label>
-			<input type="file" class="control-label col-md-9"  required="required" ng-model="ad.image"><br>
+			<input type="file" class="control-label col-md-9"  required="required"  ng-model="ad.image"><br>
 
 		</div>
-		<div class="col-md-4">
-			<img width="150" ng-src="ad.image" src=""/>
+		<div class="col-md-4" id="image"></div>
+		<div class="col-md-12">
+
+			<label for="inputCategory" class="col-md-3 control-label">Category:</label>
+			<select id="inputCategory" class="col-md-9" ng-model="ad.categoryId">
+				<option ng-repeat="category in categories" value="{{category.id}}" >{{category.name}}</option>
+			</select>
+
+			<label for="inputTown" class="col-md-3 control-label">Town:</label>
+			<select id="inputTown" class="col-md-9" ng-model="ad.townId">
+				<option ng-repeat="town in towns" value="{{town.id}}" >{{town.name}}</option>
+			</select>
 		</div>
+		<span class="col-md-3"></span>
+		<button class="col-md-3" ng-click="publishAd(ad)">Publish</button>
+		<button class="col-md-3" ng-click="cancel()">Cancel</button>
 </div>
