--- a/app/templates/loginForm.html
+++ b/app/templates/loginForm.html
@@ -12,7 +12,7 @@
 		</div>
 		<div class="form-group">
 			<span class="col-md-3"></span>
-			<button class="col-md-3" type="submit" ng-click="login(user)">LoginL</button>
+			<button class="col-md-3" type="submit" ng-click="login(user)">Login</button>
 			<a href="#/register" class="col-lg-5">Register here</a>
 		</div>
 	</form>
