--- a/app/templates/homePage.html
+++ b/app/templates/homePage.html
@@ -1,7 +1,7 @@
 <div class="row headerTitle">
 	<div class="col-md-3"></div>
 	<h3 class="col-md-6">ADS - Home</h3>
-	<span class="pull-right col-md-3">{{username}} <a href="#/logout">logout</a></span>
+	<span class="pull-right col-md-3" ng-if="isLoggedIn">{{username}} <a href="#/logout">logout</a></span>
 </div>
 <div class="row homepage">
 	<div class="col-md-2 ">
