--- a/app/templates/usersAds.html
+++ b/app/templates/usersAds.html
@@ -2,7 +2,7 @@
     <img src="images/loading.gif" ng-hide="ready" alt="">
     <ul>
         <li  ng-repeat="ad in adsData.ads" ng-cloak>
-            <div class="adContainer well" >
+            <div class="adContainer well panel" >
                 <div class="col-md-8">
                     <div class="row">
                         <div class="col-md-6">
@@ -55,6 +55,6 @@
             </div>
         </li>
     </ul>
-    <pagination ng-model="currentPage" page="adsData.startPage" total-items="adsData.numItems" ng-change="pageChanged(currentPage)" items-per-page="pageSize"></pagination>
+    <pagination class="col-md-12" ng-model="currentPage" page="adsData.startPage" total-items="adsData.numItems" ng-change="pageChanged(currentPage)" items-per-page="pageSize"></pagination>
 </div>
 
